[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://stal_shadow.png" type="Texture" id=2]
[ext_resource path="res://MetaPanel.gd" type="Script" id=3]
[ext_resource path="res://ErrorHandler.gd" type="Script" id=4]
[ext_resource path="res://ErrorHandler.tscn" type="PackedScene" id=5]

[node name="MetaPanel" type="Panel"]
visible = false
anchor_top = 0.05
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MetadataContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 90.0
margin_top = 119.0
margin_right = 550.0
margin_bottom = 337.0

[node name="TextDataMargin" type="MarginContainer" parent="CenterContainer/MetadataContainer"]
margin_right = 148.0
margin_bottom = 218.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="TextData" type="VBoxContainer" parent="CenterContainer/MetadataContainer/TextDataMargin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 138.0
margin_bottom = 208.0

[node name="NameLabel" type="Label" parent="CenterContainer/MetadataContainer/TextDataMargin/TextData"]
margin_right = 128.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( -365.473, 61.653 )
text = "Pack Name"
align = 1

[node name="NameInp" type="LineEdit" parent="CenterContainer/MetadataContainer/TextDataMargin/TextData"]
margin_top = 18.0
margin_right = 128.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( -365.473, 43.653 )
hint_tooltip = "Used in README as well as for folder and save names."
expand_to_text_length = true

[node name="AuthorLabel" type="Label" parent="CenterContainer/MetadataContainer/TextDataMargin/TextData"]
margin_top = 46.0
margin_right = 128.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( -365.473, 61.653 )
text = "Pack Author"
align = 1

[node name="AuthorInp" type="LineEdit" parent="CenterContainer/MetadataContainer/TextDataMargin/TextData"]
margin_top = 64.0
margin_right = 128.0
margin_bottom = 88.0
rect_pivot_offset = Vector2( -365.473, 43.653 )
hint_tooltip = "Only used in README.txt."
expand_to_text_length = true

[node name="VersionLabel" type="Label" parent="CenterContainer/MetadataContainer/TextDataMargin/TextData"]
margin_top = 92.0
margin_right = 128.0
margin_bottom = 106.0
rect_pivot_offset = Vector2( -365.473, 61.653 )
text = "Pack Version"
align = 1

[node name="VersionInp" type="LineEdit" parent="CenterContainer/MetadataContainer/TextDataMargin/TextData"]
margin_top = 110.0
margin_right = 128.0
margin_bottom = 134.0
rect_pivot_offset = Vector2( -365.473, 43.653 )
hint_tooltip = "Only used in README.txt."
expand_to_text_length = true

[node name="MonoCheck" type="CheckBox" parent="CenterContainer/MetadataContainer/TextDataMargin/TextData"]
margin_top = 138.0
margin_right = 128.0
margin_bottom = 162.0
hint_tooltip = "Enables fade out effect."
pressed = true
text = "Monaural Audio"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IconMargin" type="MarginContainer" parent="CenterContainer/MetadataContainer"]
margin_left = 152.0
margin_right = 305.0
margin_bottom = 218.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="IconContainer" type="VBoxContainer" parent="CenterContainer/MetadataContainer/IconMargin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 143.0
margin_bottom = 208.0

[node name="Icon" type="TextureRect" parent="CenterContainer/MetadataContainer/IconMargin/IconContainer"]
margin_right = 133.0
margin_bottom = 128.0
texture = ExtResource( 1 )

[node name="Disc" type="TextureRect" parent="CenterContainer/MetadataContainer/IconMargin/IconContainer/Icon"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IconLabel" type="Label" parent="CenterContainer/MetadataContainer/IconMargin/IconContainer"]
margin_top = 132.0
margin_right = 133.0
margin_bottom = 146.0
text = "Pack Icon"
align = 1

[node name="FileButton" type="Button" parent="CenterContainer/MetadataContainer/IconMargin/IconContainer"]
margin_top = 150.0
margin_right = 133.0
margin_bottom = 170.0
hint_tooltip = "Select a PNG or JPEG file for the pack cover."
text = "Select file..."
clip_text = true

[node name="OverlayTick" type="CheckBox" parent="CenterContainer/MetadataContainer/IconMargin/IconContainer"]
margin_top = 174.0
margin_right = 133.0
margin_bottom = 198.0
hint_tooltip = "Whether or not to add overlay of Stal."
pressed = true
text = "Add disc overlay"
align = 1

[node name="DescMargin" type="MarginContainer" parent="CenterContainer/MetadataContainer"]
margin_left = 309.0
margin_right = 460.0
margin_bottom = 218.0

[node name="DescContainer" type="VBoxContainer" parent="CenterContainer/MetadataContainer/DescMargin"]
margin_right = 151.0
margin_bottom = 218.0

[node name="DescLabel" type="Label" parent="CenterContainer/MetadataContainer/DescMargin/DescContainer"]
margin_right = 151.0
margin_bottom = 14.0
text = "Pack Description           "

[node name="DescEdit" type="TextEdit" parent="CenterContainer/MetadataContainer/DescMargin/DescContainer"]
margin_top = 18.0
margin_right = 151.0
margin_bottom = 218.0
hint_tooltip = "Used as the pack description in MCMeta file."
size_flags_vertical = 3
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorHandler" parent="." instance=ExtResource( 5 )]
script = ExtResource( 4 )
[connection signal="error" from="." to="ErrorHandler" method="_on_MetaPanel_error"]
[connection signal="toggled" from="CenterContainer/MetadataContainer/TextDataMargin/TextData/MonoCheck" to="." method="_on_MonoCheck_toggled"]
[connection signal="button_down" from="CenterContainer/MetadataContainer/IconMargin/IconContainer/FileButton" to="." method="_on_File_button_down"]
[connection signal="toggled" from="CenterContainer/MetadataContainer/IconMargin/IconContainer/OverlayTick" to="." method="_on_OverlayTick_toggled"]
